aplicando conceitos de variaveis do EJS

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,12 @@
         <h1>Guia de Perguntas</h1>
         <hr>
         <h3>Lista de Perguntas</h3>
+
+        <p>Nome: <%= nome %></p>
+        <p>Linguagem Favorita: <%= lang %></p>
+        <p>Empresa: <%= empresa %></p>
+        <p>Localização: <%= localizacao %></p>
+
     </html>
 </body>
 </html>
