--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guia de Perguntas</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+
+    <img src="/img/logo.png">
+
     <html>
         <h1>Guia de Perguntas</h1>
         <hr>
