--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -9,7 +9,20 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
 </head>
 <body>
-    <h1> Estilo do bootstrap</h1>
+
+    <div class="container">
+        <h3>Faça uma Pergunta!</h3>
+        <hr>
+        <form>
+            <label>Nome da Pergunta</label>
+            <input type="text" placeholder="Titulo" class="form-control">
+            <br><label>Descreva sua Pergunta</label>
+            <textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
+            <br>
+            <button class="btn btn-primary">Mandar!</button>
+        </form>
+    </div>
+
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
