add card no formulario

--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -11,16 +11,21 @@
 <body>
 
     <div class="container">
-        <h3>Faça uma Pergunta!</h3>
-        <hr>
-        <form>
-            <label>Nome da Pergunta</label>
-            <input type="text" placeholder="Titulo" class="form-control">
-            <br><label>Descreva sua Pergunta</label>
-            <textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
-            <br>
-            <button class="btn btn-primary">Mandar!</button>
-        </form>
+        <div class="card">
+            <div class="card-header">
+                <h3>Faça uma Pergunta!</h3>
+            </div>
+            <div class="card-body">
+                <form>
+                    <label>Nome da Pergunta</label>
+                    <input type="text" placeholder="Titulo" class="form-control">
+                    <br><label>Descreva sua Pergunta</label>
+                    <textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
+                    <br>
+                    <button class="btn btn-primary">Mandar!</button>
+                </form>
+            </div>
+        </div>
     </div>
 
 </body>
