alterando layout da pagina de perguntas com bootstrap

--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -9,9 +9,14 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <nav class="navbar navbar-light" style="background-color: MediumPurple;">
+        <a class="navbar-brand" href="/">
+            <img src="/img/logo.png">
+        </a>
+    </nav>
 
     <div class="container">
-        <div class="card">
+        <div class="card" id="formulario-pergunta">
             <div class="card-header">
                 <h3>Faça uma Pergunta!</h3>
             </div>
@@ -22,7 +27,7 @@
                     <br><label>Descreva sua Pergunta</label>
                     <textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
                     <br>
-                    <button class="btn btn-primary">Mandar!</button>
+                    <button class="btn"style="background-color: MediumPurple;"> Mandar!</button>
                 </form>
             </div>
         </div>
