--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -7,7 +7,7 @@
                 <h3>Faça uma Pergunta!</h3>
             </div>
             <div class="card-body">
-                <form>
+                <form method="POST" action="salvarformulario">
                     <label>Nome da Pergunta</label>
                     <input type="text" placeholder="Titulo" class="form-control">
                     <br><label>Descreva sua Pergunta</label>
