obtendo dados de um formulario utilizando BodyParser

--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -9,11 +9,11 @@
             <div class="card-body">
                 <form method="POST" action="salvarformulario">
                     <label>Nome da Pergunta</label>
-                    <input type="text" placeholder="Titulo" class="form-control">
+                    <input type="text" placeholder="Titulo" class="form-control" name="titulo">
                     <br><label>Descreva sua Pergunta</label>
-                    <textarea placeholder="Descreva sua pergunta aqui" class="form-control"></textarea>
+                    <textarea placeholder="Descreva sua pergunta aqui" class="form-control" name="descricao"></textarea>
                     <br>
-                    <button class="btn"style="background-color: MediumPurple;"> Mandar!</button>
+                    <button type="submit" class="btn btn"style="background-color: MediumPurple;"> Mandar!</button>
                 </form>
             </div>
         </div>
