--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,24 @@
 <%- include('partials/header') %>
 <body>
     <%- include('partials/navbar') %>
-    <h1> Estilo do bootstrap</h1>
+    
+    <div class="container">
+        <hr>
+        <a href="/perguntar" class="btn" style="background-color: MediumPurple; font-style: oblique;">Faça sua Pergunta!</a>
+        <hr>
+        <h1>Perguntas</h1>
+        <% perguntas.forEach(pergunta => { %>
+            <br>
+            <div class="card">
+                <div class="card-body">
+                    <h3><%= pergunta.titulo %></h3>
+                </div>
+                <div class="card-footer">
+                     <button class="btn" style="background-color: MediumPurple; font-style: oblique;">Responda!</button>
+                </div>
+            </div>
+        <% }) %>
+    </div>
+
 </body>
 <%- include('partials/footer') %>
