--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -10,7 +10,7 @@
                 <form method="POST" action="salvarformulario">
                     <label>Nome da Pergunta</label>
                     <input type="text" placeholder="Titulo" class="form-control" name="titulo">
-                    <br><label>Descreva sua Pergunta</label>
+                    <br><label>Descreva sua Pergunta aqui</label>
                     <textarea placeholder="Descreva sua pergunta aqui" class="form-control" name="descricao"></textarea>
                     <br>
                     <button type="submit" class="btn btn"style="background-color: MediumPurple;"> Mandar!</button>
